2000-12-27  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2000-12-22  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	* POTFILES.in: Added some missing screensaver descriptions.
	
2000-12-21  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-12-20  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2000-12-19  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2000-12-18  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2000-12-18  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: Updated italian translation

2000-12-18  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-12-17  Pablo Saratxaga <pablo@mandrakesoft.com>

	* az.po: Updated Azeri file

2000-12-13  Christophe Merlet  <redfox@eikonex.org>

	* fr.po: updated French translation.

2000-12-12  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2000-12-11  Pablo Saratxaga <pablo@mandrakesoft.com>

	* az.po: Added Azeri file
	* fr.po,pl.po: fixed header
	* sk.po: copied sk.po from stable branch

2000-12-05  Simos Xenitellis  <simos@hellug.gr>

	* el.po: Update of Greek translation.

2000-11-25  Karl Eichwalder  <ke@suse.de>

	* de.po: Update.

2000-11-14  Zbigniew Chyla  <cyba@gnome.pl>

	* pl.po: Updated Polish translation

2000-11-11  Jarkko Ranta  <jjranta@cc.joensuu.fi>

	* fi.po: Updated Finnish Translation

2000-10-30  Zbigniew Chyla  <cyba@gnome.pl>

	* pl.po: Updated Polish translation.

2000-10-28  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-10-22  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2000-10-21  Karl Eichwalder  <ke@suse.de>

	* de.po: Update.

2000-10-16  Stanislav Brabec  <utx@penguin.cz> 

	* fr.po: Removed bug.

2000-10-15  Kjartan Maraas  <kmaraas@gnome.org>
