@@ -6,6 +6,7 @@ capplets/mime-type/mime-type-capplet.c
 capplets/mime-type/new-mime-window.c
 capplets/new-background-properties/applier.c
 capplets/new-background-properties/background-properties.glade.h
+capplets/new-background-properties/prefs-widget.c
 capplets/new-bell-properties/bell-properties.glade.h
 capplets/new-keyboard-properties/keyboard-properties.glade.h
 capplets/new-mouse-properties/mouse-properties.glade.h
@@ -78,3 +79,8 @@ capplets/theme-switcher/install.c
 capplets/url-properties/url-properties.c
 capplets/wm-properties/wm-properties-capplet.c
 new-control-center/capplet-dir-view.c
+new-control-center/gnomecc.glade.h
+root-manager/root-manager.c
+root-manager/root-manager-wrap.c
+root-manager/userdialogs.c
+root-manager/userdialogs.h
