@@ -1,3 +1,8 @@
+2000-12-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian translation.
+	* POTFILES.in: Added some missing screensaver descriptions.
+	
 2000-12-27  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
